--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/GreenCommute:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
