--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          file: ./greencommute_be/Docker
+          file: ./greencommute_be/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
 
