--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   frontend: 
     container_name: frontend 
     #image: srivyshnavikoduri/greencommute
-    build: ../greencommute_fe
+    build: ./greencommute_fe
     ports: 
      - "8080:80"
   jobservice: 
     #image: srivyshnavikoduri/greencommutejobservice
-    build: ./jobsService
+    build: ./greencommute_be/jobsService
     ports: 
      - "8082:8082"
     depends_on: 
@@ -35,7 +35,7 @@ services:
 
   organizationservice: 
     container_name: organizationservice
-    build: ./organizationService
+    build: ./greencommute_be/organizationService
     ports: 
       - "8081:8081" 
     depends_on:
