--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,18 +46,14 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-#       - name: Build and push
-#         id: docker_build
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: ./
-#           file: ./greencommute_be/docker-compose.yml
-#           push: true
-#           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./greencommute_fe/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-      - name: Build the stack
-        run: docker-compose up -d
-#       - name: Test
-#         run: docker run --network container:webapp-frontend appropriate/curl -s --retry 10 --retry-connrefused http://localhost:5000/
