--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,14 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: 'BC16-green-commute/greencommute_fe'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-    
       - name: Check Out Repo 
         uses: actions/checkout@v2
 
@@ -46,18 +38,14 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-#       - name: Build and push
-#         id: docker_build
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: ./
-#           file: ./greencommute_be/docker-compose.yml
-#           push: true
-#           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./greencommute_fe/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-      - name: Build the stack
-        run: docker-compose up -d
-#       - name: Test
-#         run: docker run --network container:webapp-frontend appropriate/curl -s --retry 10 --retry-connrefused http://localhost:5000/
