--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,6 +17,9 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    defaults:
+      run:
+        working-directory: 'greencommute_be/jobsService'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -53,7 +56,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./greencommute_be
+          context: ./greencommute_be/jobsService
           file: ./greencommute_be/jobsService/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/greencommutedocker:latest
