--- a/greencommute_be/jobsService/Dockerfile
+++ b/greencommute_be/jobsService/Dockerfile
@@ -1,4 +1,4 @@
 FROM  adoptopenjdk/openjdk11
-COPY ./build/libs/jobsService-*.jar app.jar
+COPY ./build/libs/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java","-jar","app.jar"] 
