--- a/greencommute_be/jobsService/Dockerfile
+++ b/greencommute_be/jobsService/Dockerfile
@@ -1,5 +1,5 @@
 FROM  adoptopenjdk/openjdk11
 RUN echo $(pwd)
-COPY ./build/libs/*.jar app.jar
+COPY */greencommute_be/jobsService/build/libs/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java","-jar","app.jar"]
