--- a/greencommute_be/organizationService/Dockerfile
+++ b/greencommute_be/organizationService/Dockerfile
@@ -1,4 +1,4 @@
 FROM adoptopenjdk/openjdk11
-COPY ./build/libs/organizationService-*.jar app.jar
+COPY  */greencommute_be/organizationService/build/libs/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java","-jar","app.jar"]
